# oodi

./: .gitignore  Makefile  pyproject.toml  setup.cfg  setup.py  tox.ini
oodi/: __init__.py  cli.py  client.py  configuration.py  constants.py  defaults.yaml  exceptions.py
oodi/codecs/: __init__.py  base.py  configuration.py  constants.py  defaults.yaml  loader.py
oodi/codecs/aac/: __init__.py  audiofile.py  decoder.py  encoder.py  tagparser.py
oodi/codecs/aif/: __init__.py  constants.py  decoder.py  encoder.py  tagparser.py
oodi/codecs/alac/: __init__.py  decoder.py  encoder.py
oodi/codecs/caf/: __init__.py  decoder.py  encoder.py
oodi/codecs/flac/: __init__.py  decoder.py  encoder.py
oodi/codecs/formats/: __init__.py  aac.py  aiff.py  alac.py  base.py  caf.py  flac.py  mp3.py  opus.py  vorbis.py  wav.py  wavpack.py
oodi/codecs/mp3/: __init__.py  constants.py  decoder.py  encoder.py  tagparser.py
oodi/codecs/mp4/: constants.py  tagparser.py
oodi/configuration/: __init__.py  loader.py
oodi/metadata/: __init__.py  albumart.py  constants.py  loader.py
test/codecs/: test_codec_decoders.py  test_codec_encoders.py  test_file_tagging.py  test_loading_codecs.py
test/configuration/: test_codec_configuration.py  test_library_configuration.py  test_loading_configuration.py
tests/: __init__.py  conftest.py  test_client.py  utils.py
tests/codecs/: __init__.py  conftest.py  test_loader.py
tests/configuration/: __init__.py  conftest.py  test_loader.py
tests/metadata/: __init__.py  conftest.py  test_constants.py  test_loader.py
(+58 files in other folders)
